fix: right align isn't working

--- a/src/css/_03-generic.scss
+++ b/src/css/_03-generic.scss
@@ -480,7 +480,6 @@ fieldset {
 	border-bottom: 1px solid var( --color-brandGrey );
 	padding-bottom: .5em;
 	padding-top: .5em;
-	text-align: right;
 	font-family: Georgia, serif;
 
 	.wf-active & {
